--- a/TestApp/Base.lproj/Main.storyboard
+++ b/TestApp/Base.lproj/Main.storyboard
@@ -26,23 +26,25 @@
                                 <rect key="frame" x="16" y="72" width="300" height="394"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="fill" contentVerticalAlignment="bottom" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Rn-Oy-R9A">
-                                        <rect key="frame" x="94" y="0.0" width="112" height="17.5"/>
+                                        <rect key="frame" x="94" y="0.0" width="112" height="18"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
-                                    <imageView autoresizesSubviews="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" placeholderIntrinsicWidth="250" placeholderIntrinsicHeight="250" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="RZN-Oi-OlB">
-                                        <rect key="frame" x="25" y="25.5" width="250.5" height="250"/>
+                                    <imageView autoresizesSubviews="NO" contentMode="redraw" verticalHuggingPriority="251" ambiguous="YES" placeholderIntrinsicWidth="250.5" placeholderIntrinsicHeight="250" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="RZN-Oi-OlB">
+                                        <rect key="frame" x="25" y="26" width="250.5" height="250"/>
                                         <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="RZN-Oi-OlB" secondAttribute="height" multiplier="1:1" id="47z-qo-utx"/>
+                                            <constraint firstAttribute="width" constant="250" id="GaG-t0-yVl"/>
+                                            <constraint firstAttribute="height" constant="250" id="iv7-g7-MXq"/>
                                         </constraints>
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="BFI-hT-mO2" appends="YES" id="hOo-YQ-h32"/>
                                         </connections>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ZqB-A9-gDG" customClass="RatingControl" customModule="TestApp" customModuleProvider="target">
-                                        <rect key="frame" x="5.5" y="283.5" width="289" height="110"/>
+                                        <rect key="frame" x="5.5" y="284" width="289" height="110"/>
                                     </stackView>
                                 </subviews>
                                 <constraints>
